--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         tools:targetApi="31">
         <activity
             android:name=".TelephonyActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -35,16 +36,20 @@
 
         <activity
             android:name=".MapsActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".LocationActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".SecondActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
